--- a/assets/scss/elements/_banner.scss
+++ b/assets/scss/elements/_banner.scss
@@ -404,7 +404,7 @@
     .cornered-container {
       margin-bottom: 2.25rem;
       .cornered-box {
-        width: 90%;
+        width: 100%;
         padding: 1.5rem;
         text-align: justify;
         font-size: 15px;
