--- a/assets/scss/elements/_footer.scss
+++ b/assets/scss/elements/_footer.scss
@@ -133,7 +133,7 @@
         width: 20px;
         opacity: 0.65;
       }
-      cursor: pointer;
+      cursor: text;
       transition: all 0.25s ease;
       &:hover {
         color: rgba(255, 255, 255, 0.65);
